Only Responsive Left

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="grid-container">
+        <div class="box" id="white-box"></div>
         <div class="box" id="white-box1"></div>        
         <div class="box" id="black-box1"></div>
         <div class="box" id="red-box1"></div>        
