--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Mondrian's composition </title>
 </head>
 <body>
+    <h1>Piet Mondrian Composition II in Red, Blue and Yellow 1930</h1>
     <div class="grid-container">
         <div class="box" id="white-box"></div>
         <div class="box" id="white-box1"></div>        
